@@ -1,3 +1,8 @@
+2010-07-27  Jackson Harper  <jackson@ximian.com>
+
+	* ApplicationLauncher.cs: We dont need the file/string anymore
+	when creating a xaml loader.
+
 2010-07-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* NativeDependencyObjectHelper.cs: Add switch entry for SecuritySettings.
