@@ -1,3 +1,8 @@
+2010-07-27  Jackson Harper  <jackson@ximian.com>
+
+	* xaml.cpp|h: We dont need the file/string anymore
+	when creating a xaml loader.
+
 2010-07-26  David Reveman  <davidr@novell.com>
 
 	* uielement.cpp (PreRender): Use lazy intermediate target
