@@ -1,3 +1,9 @@
+2010-07-27  Jackson Harper  <jackson@ximian.com>
+
+	* ManagedXamlLoader.cs:
+	* XamlLoaderCallbacks.cs: We dont need the file/string anymore
+	when creating a xaml loader.
+
 2010-07-26  Jackson Harper  <jackson@ximian.com>
 
 	* ManagedXamlLoader.cs:
